[package]
name = "cover_art"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", default-features = false, features = ["std", "derive"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = { version = "1.0.142", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }
